--- a/profiles.ini
+++ b/profiles.ini
@@ -1,11 +1,11 @@
 [Install0000000000000000]
-Default=8hnndqdq.default-release
+Default=00000000.default-release
 Locked=1
 
 [Profile0]
 Name=default-release
 IsRelative=1
-Path=8hnndqdq.default-release
+Path=00000000.default-release
 
 [General]
 StartWithLastProfile=1
