--- a/profiles.ini
+++ b/profiles.ini
@@ -5,7 +5,7 @@ Locked=1
 [Profile0]
 Name=default-release
 IsRelative=1
-Path=00000000.default-release
+Path=f83gmwpk.default-release
 
 [General]
 StartWithLastProfile=1
