--- a/supervisord.conf
+++ b/supervisord.conf
@@ -34,4 +34,4 @@ stdout_logfile=/var/log/x11vnc.log
 stderr_logfile=/var/log/x11vnc.err
 
 [include]
-files = /app/conf.d/*.conf
+files = /do/conf.d/*.conf
